# Segment-Everything-Everywhere-All-At-Once

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/readmes/: DATASET.md  EVAL.md  INSTALL.md  TRAIN.md
assets/requirements/: requirements.txt  requirements_custom.txt
assets/scripts/: run_demo.sh
configs/seem/: focalt_unicl_lang_v0.yaml  focalt_unicl_lang_v1.yaml  samvitb_unicl_lang_v1.yaml
datasets/: build.py  refer.py  semseg_loader.py
datasets/dataset_mappers/: __init__.py  coco_panoptic_interactive_dataset_mapper.py  coco_panoptic_new_baseline_dataset_mapper.py  imagenet_dataset_mapper.py  mask_former_panoptic_dataset_mapper.py  mask_former_semantic_dataset_mapper.py  refcoco_dataset_mapper.py  scannet_dataset_mapper.py  scannet_pano_dataset_mapper.py  vlp_dataset_mapper.py
datasets/evaluation/: __init__.py  classification_evaluation.py  grounding_evaluation.py  instance_evaluation.py  panoptic_evaluation.py  retrieval_evaluation.py
datasets/registration/: register_ade20k_full.py  register_ade20k_instance.py  register_ade20k_panoptic.py  register_bdd100k_semseg.py  register_coco_lvis_panoptic_annos_caption_grounding.py  register_coco_panoptic_annos_caption.py  register_coco_panoptic_annos_caption_grounding.py  register_coco_panoptic_annos_semseg.py  register_refcoco_dataset.py  register_scannet_panoptic.py
datasets/utils/: refcoco2json.py  refer.py
datasets/visual_sampler/: __init__.py  mask_generators.py  polygon.py  sampler.py  (+2 more)
demo_code/: app.py  requirements.txt  run_demo.sh
modeling/: BaseModel.py
seem/: entry.py
trainer/: __init__.py  default_trainer.py  xdecoder_trainer.py
utils/: __init__.py  arguments.py  dataset.py  distributed.py  model.py  visualizer.py
(+182 files in other folders)
